# quadrotor_msgs

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
ipc/: CMakeLists.txt  Makefile
ipc/include/: quadrotor_msgs_Command.h  quadrotor_msgs_PWMCommand.h
ipc/mex/: quadrotor_msgs_BatteryStatus.cc  quadrotor_msgs_BatteryVoltage.cc  quadrotor_msgs_CascadedCommand.cc  quadrotor_msgs_CascadedCommandGains.cc  quadrotor_msgs_Command.cc  quadrotor_msgs_OdometryArray.cc  quadrotor_msgs_PDCommand.cc  quadrotor_msgs_PWMCommand.cc  quadrotor_msgs_PositionCommand.cc  quadrotor_msgs_PositionCommandGains.cc  quadrotor_msgs_RPMCommand.cc  quadrotor_msgs_SO3Command.cc
ipc/ros/: quadrotor_msgs_BatteryStatus_publisher.cc  quadrotor_msgs_BatteryStatus_subscriber.cc  quadrotor_msgs_BatteryVoltage_publisher.cc  quadrotor_msgs_BatteryVoltage_subscriber.cc  quadrotor_msgs_CascadedCommandGains_publisher.cc  quadrotor_msgs_CascadedCommandGains_subscriber.cc  quadrotor_msgs_CascadedCommand_publisher.cc  quadrotor_msgs_CascadedCommand_subscriber.cc  quadrotor_msgs_Command_publisher.cc  quadrotor_msgs_Command_subscriber.cc  quadrotor_msgs_OdometryArray_publisher.cc  quadrotor_msgs_OdometryArray_subscriber.cc  quadrotor_msgs_PDCommand_publisher.cc  quadrotor_msgs_PDCommand_subscriber.cc  quadrotor_msgs_PWMCommand_publisher.cc  quadrotor_msgs_PWMCommand_subscriber.cc  quadrotor_msgs_PositionCommandGains_publisher.cc  quadrotor_msgs_PositionCommandGains_subscriber.cc  quadrotor_msgs_PositionCommand_publisher.cc  quadrotor_msgs_PositionCommand_subscriber.cc  quadrotor_msgs_RPMCommand_publisher.cc  quadrotor_msgs_RPMCommand_subscriber.cc  quadrotor_msgs_SO3Command_publisher.cc  quadrotor_msgs_SO3Command_subscriber.cc
ipc/xdr/: quadrotor_msgs_BatteryStatus.xdr  quadrotor_msgs_BatteryVoltage.xdr  quadrotor_msgs_CascadedCommand.xdr  quadrotor_msgs_CascadedCommandGains.xdr  quadrotor_msgs_Command.xdr  quadrotor_msgs_OdometryArray.xdr  quadrotor_msgs_PDCommand.xdr  quadrotor_msgs_PWMCommand.xdr  quadrotor_msgs_PositionCommand.xdr  quadrotor_msgs_PositionCommandGains.xdr  quadrotor_msgs_RPMCommand.xdr  (+1 more)
msg/: AccelDisturbance.msg  AltitudeInfo.msg  AltitudeObservation.msg  CascadedCommand.msg  Command.msg  FSMMode.msg  FlowObservation.msg  GPIOTime.msg  HeightDelta.msg  LocalOdometry.msg  PDCommand.msg  PWMCommand.msg  PositionCommand.msg  RPMCommand.msg  RotorforceCommand.msg  Segment.msg  Spline.msg  SplineArray.msg  StaticTrimInfo.msg  TrackingError.msg  TransientTrimInfo.msg  l1_angvel_debug.msg
(+12 files in other folders)
