<?xml version="1.0"?>
<package>
  <name>quadrotor_msgs</name>
  <version>0.0.11</version>
  <description>The quadrotor_msgs package</description>

  <maintainer email="nmichael@cmu.edu">Nathan Michael</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
